tests/negative/other/non_callable_value_call.tx
// EXPECTED: COMPILE_ERROR
// Description: Calling a plain non-function value should fail during type checking.

function main() {
    let count: int = 1;
    print(count());
}
